# bobetex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SETUP.md  conanfile.txt
logo/: logo.tex
scripts/: Field.js  Gui.js  Hud.js  Player.js  Shop.js  main.js  sub.js
src/: CMakeLists.txt  TriangleRenderer.cpp  TriangleRenderer.hpp  bobetex.cpp  gl.cpp  gl.hpp  globals.cpp  globals.hpp  jsapi.cpp  jsapi.hpp  utils.cpp  utils.hpp
